styles/portfolio.css
:root {
  --handwriting-font-family: "Playpen Sans",
    cursive;
  --main-font-family: "Playwrite DE Grund",
    system-ui;
}

body {
  background: linear-gradient(90deg,
      rgb(179, 99, 249) 11.2%,
      rgb(165, 69, 249) 47.7%,
      rgb(152, 38, 252) 80.2%);
}

/* navbar */

.navbar-green {
  background: linear-gradient(-20deg, #3ced42 0%, #74f379 50%, #86e089 100%);
  font-family: var(--main-font-family);
  font-weight: bolder;
}

.navbar-nav a {
  color: rgb(152, 38, 252);
}

.navbar-nav a:hover {
  color: rgb(152, 38, 252);
  transform: scale(1.25);
}

/* headings */
.hero-section {
  margin-top: 120px;
  margin-bottom: 30px;
}

h1 {
  font-size: 50px;
  font-family: var(--handwriting-font-family);
  color: rgb(71, 238, 76);
}

h2 {
  font-size: 20px;
  font-family: var(--main-font-family);
  font-weight: 600;
}

h3 {
  font-size: 30px;
  font-family: var(--handwriting-font-family);
  color: rgb(71, 238, 76);
  font-weight: 500;
}

.hero-heading {
  font-family: var(--handwriting-font-family);
  color: rgb(71, 238, 76);
  margin-top: 120px;
}

/* paragraphs */
#paragraph {
  font-size: 20px;
  font-family: var(--main-font-family);
  font-weight: 500;
  text-align: justify;
}

#socialLinks {
  font-family: var(--main-font-family);
  font-weight: 500;
  margin-left: -400px;
}

.justified-text-right {
  width: 27rem;
  margin-right: auto;
}

.justified-text-left {
  width: 27rem;
  margin-left: auto;
}

li {
  font-family: var(--main-font-family);
  font-weight: 500;
  text-align: justify;
}

ul {
  list-style: square;
}


/* about page */
.about-myself h1 {
  font-family: var(--handwriting-font-family);
  color: rgb(71, 238, 76);
}

.recommendations {
  font-size: 40px;
  margin-top: 40px;
  margin-bottom: 20px;
}

/* about page outside links */
.shecodes a,
.personality a {
  text-decoration: none;
  color: rgb(71, 238, 76);
  transition: color 0.2s;
}

.shecodes a:hover,
.personality a:hover {
  color: white;
}

#inclusiveLanguage,
#intraIntel,
#interIntel,
#emoIntel,
#lgbtDef,
#polyDef,
#feministDef {
  text-decoration: none;
  color: rgb(71, 238, 76);
  transition: color 0.2s;
}

#inclusiveLanguage:hover,
#intraIntel:hover,
#interIntel:hover,
#emoIntel:hover,
#lgbtDef:hover,
#polyDef:hover,
#feministDef:hover {
  color: white;
}

/* social networks */
.social-net:link {
  color: rgb(83, 239, 89);
  text-decoration: none;
}

.social-net:hover {
  color: rgb(87, 85, 85);
}

.social-net:visited {
  color: rgb(83, 239, 89);
}

.social-link:link {
  color: rgb(83, 239, 89);
}

.social-link:visited {
  color: rgb(83, 239, 89);
}

.contact-btn {
  font-size: 40px;
  transition: transform 0.5s ease;
}

.contact-btn:hover {
  transform: scale(1.7);
}

.social-btn {
  font-size: 40px;
  margin-bottom: 20px;
}

.social-btn:hover {
  transform: scale(1.7);
  transition: transform 0.5s ease;
}

.email-link {
  margin-top: 75px;
  margin-bottom: 20px;
}

.email-link a {
  text-decoration: none;
  font-size: 25px;
  color: rgb(83, 239, 89);
}

.email-link:hover {
  transform: scale(1.2);
  transition: transform 0.5s ease;
}

/* buttons to see projects */
.btn-link {
  border-radius: 5px;
  border: 3px solid rgb(83, 239, 89);
  color: rgb(83, 239, 89);
  text-decoration: none;
  transition: transform 0.5s ease;
}

.btn-link:hover {
  transform: scale(1.15);
  color: rgb(83, 239, 89);
  border-radius: 5px;
  border: 3px solid rgb(83, 239, 89);
}

/* RESPONSIVENESS */

/* works only on small screens */
@media (max-width: 768px) {
  .navbar>.container {
    flex-wrap: nowrap !important;
  }

  h1,
  h2,
  h3,
  a {
    width: inherit;
    text-align: center;
  }
}

/* works on medium and small screens */
@media (max-width: 992px) {
  .hero-section {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .work-examples {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  h1 {
    font-size: 35px;
  }

  .intro-text {
    font-size: 19px;
  }

  .justified-text-right,
  .justified-text-left {
    width: inherit;
  }

  .work-image {
    margin-bottom: 2rem;
    width: inherit;
  }
}

/* works on large, xl and xxl screens */
/* to make the web pages images bigger and centered of the web page when hover */
@media (min-width: 993px) {

  #leftImage {
    transition: transform 0.5s ease;
  }

  #leftImage:hover {
    transform: translateX(calc(25vw - 90px)) scale(2);
  }

  #rightImage {
    transition: transform 0.5s ease;
  }

  #rightImage:hover {
    transform: translateX(calc(90px - 25vw)) scale(2);
  }

  #imgRecommend {
    transition: transform 0.5s ease;
  }

  #imgRecommend:hover {
    transform: scale(1.5);
  }

}

/* button that sends you to another section of the page */
.section-btn {
  background: rgb(71, 238, 76);
  display: block;
  margin: 20px auto;
  margin-bottom: 30px;
  text-decoration: none;
  border: 3px solid rgb(152, 38, 252);
  padding: 10px;
  transition: transform 0.5s ease;
}

.section-btn a {
  text-decoration: none;
  color: rgb(152, 38, 252);
  font-weight: bolder;
  font-family: var(--main-font-family);
  font-size: 15px;
}

.section-btn:hover {
  transform: scale(1.15);
}

.section-btn:visited {
  color: rgb(152, 38, 252);
}

